big refactoring to use immutables and converting to more complete use of javaslang collections